fix line highlight not showing up when printing

--- a/packages/core-web/src/styles/markbind.css
+++ b/packages/core-web/src/styles/markbind.css
@@ -27,7 +27,7 @@ pre.hljs > code {
     background: none;
 }
 
-pre > code.hljs { 
+pre > code.hljs {
     background-clip: padding-box;
     border-radius: 5px;
     counter-reset: line;
@@ -69,6 +69,7 @@ pre > code.hljs[heading] {
         white-space: pre-wrap;
         word-wrap: break-word;
         word-break: break-all;
+        background: ghostwhite;
     }
 
     code.hljs.inline {
@@ -78,7 +79,7 @@ pre > code.hljs[heading] {
     }
 
     code span.highlighted {
-        background: lavender;
+        background-color: lavender !important;
     }
 
     .hljs:not(.inline).line-numbers-print > span {
